Fix some spot bugs errors Add task list support to plans